--- a/test.css
+++ b/test.css
@@ -31,7 +31,7 @@ body {
 }
 
 .main-outer {
-  background-image: url('https://unsplash.com/photos/a-futuristic-city-at-night-with-neon-lights-FXJTvGrqevg');
+  background-image: url('https://wallpapers.com/images/featured-full/cyberpunk-background-a8kv41xiuue1pkw3.jpg');
   background-size: cover;
   background-attachment: fixed;
   /* ... properti lain ... */
